# reduct-py

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: bucket.md  client.md  quick-start.md  replication.md  requirements.txt  subscribing.md  subscripting.md
docs/api/: bucket.md  bucket_info.md  bucket_settings.md  client.md  entry_info.md  record.md  reduct_error.md  server_info.md  token.md
examples/: quick_start.py  subscribing.py  subscripting.py  subscription.py
pkg/reduct/: __init__.py  bucket.py  client.py  error.py  http.py  record.py  time.py  version.py
pkg/reduct/batch/: __init__.py  batch_v1.py  batch_v2.py  common.py  v1.py  v2.py
pkg/reduct/msg/: bucket.py  lifecycle.py  replication.py  server.py  token.py
reduct/: __init__.py  bucket.py  client.py  error.py  http.py  record.py  time.py
reduct/msg/: bucket.py  replication.py  server.py  token.py
tests/: attachment_test.py  batch_v2_test.py  bucket_test.py  client_test.py  conftest.py  lifecycle_model_test.py  lifecycle_test.py  record_test.py  replication_test.py
