[build-system]
requires = ["setuptools>=40.8.0", "wheel"]

[project]

name = "reduct-py"
version = "1.8.1"
description = "ReductStore Client SDK for Python"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["sdk", "reductstore", "api client", "database", "time series database"]
authors = [
    { name = "Alexey Timin", email = "atimin@gmail.com" },
    { name = "Ciaran Moyne" },
    { name = "Anthony Cavin", email = "anthony@reduct.store" },
]
maintainers = [
    { email = "atimin@gmail.com", name = "Alexey Timin" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: aiohttp",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["aiohttp~=3.8", "pydantic~=2.4", "deprecation~=2.1"]

[project.optional-dependencies]
test = [
    "pytest>=7.4,<9.0",
    "pytest-mock~=3.11",
    "pytest-asyncio~=0.21",
    "requests~=2.31",
]

lint = ["pylint>=2.17,<4.0"]
format = ["black~=23.9"]
docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.4",
    "plantuml-markdown~=3.9",
    "mkdocs-same-dir~=0.1",
    "mkdocstrings[python]~=0.23"
]

[project.urls]
ReductStore = "https://www.reduct.store"
Documentation = "https://py.reduct.store/"
Source = "https://github.com/reductstore/reduct-py"
Changelog = "https://github.com/reductstore/reduct-py/blob/main/CHANGELOG.md"
Twitter = "https://twitter.com/ReductStore"
Blog = "https://dev.to/reductstore"


[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.pylint]
max-line-length = 88
extension-pkg-whitelist = "pydantic"
good-names = "me,n"
