[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
[project]

name = "reduct-py"
dynamic = ["version"]

description = "ReductStore Client SDK for Python"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["sdk", "reductstore", "api client", "database", "time series database"]
authors = [
    { name = "Alexey Timin", email = "atimin@gmail.com" },
    { name = "Ciaran Moyne" },
    { name = "Anthony Cavin", email = "anthony@reduct.store" },
]
maintainers = [
    { email = "atimin@gmail.com", name = "Alexey Timin" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: aiohttp",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["aiohttp >=3.8,<4", "pydantic >=2.4,<3", "deprecation >=2.1,<3"]

[project.optional-dependencies]
test = [
    "pytest>=7.4,<9.0",
    "pytest-mock~=3.11",
    "pytest-asyncio>=0.21,<2.0",
    "requests~=2.31",
]

lint = ["pylint>=2.17,<5.0"]
format = ["black>=23.9,<26.0"]

[project.urls]
ReductStore = "https://www.reduct.store"
Documentation = "https://www.reduct.store/docs"
Source = "https://github.com/reductstore/reduct-py"
Changelog = "https://github.com/reductstore/reduct-py/blob/main/CHANGELOG.md"
Twitter = "https://twitter.com/ReductStore"
Blog = "https://www.reduct.store/blog"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"

[tool.pylint]
max-line-length = 88
extension-pkg-whitelist = "pydantic"
good-names = "me,n"


[tool.setuptools.dynamic]
version = {attr = "reduct.version.__version__"}

[tool.setuptools.packages.find]
where = ["pkg"]
